simplify `areAllElementsOfType`